@@ -8,7 +8,7 @@ kernelversion="2.4.27"
 # Options below are assembled into one variable 'condition'
 # in the build scripts
 fdisk="parted.txt;cfdisk.txt"
-network="supports-tftp;supports-rarp;supports-dhcp;supports-bootp;supports-nfsroot"
+network="supports-tftp;supports-dhcp;supports-bootp;supports-nfsroot"
 boot=""
 other="supports-serial-console;rescue-needs-root-disk"
 smp="supports-smp"
