@@ -378,6 +378,10 @@ xserver-xfree86  xserver-xfree86/config/monitor/mode-list \
 #d-i preseed/include_command            string \
 #    if $(grep -q "GUID: 0aec3050aec305000001a003" /proc/scsi/usb-storage-*/*); \
 #    then echo kraken.cfg; else echo otherusb.cfg; fi
+
+# To check the format of your preseed file before performing an install,
+# you can use debconf-set-selections:
+#   debconf-set-selections -c preseed.cfg
 </screen></informalexample>
 
 </para>
