@@ -98,6 +98,11 @@ debian-installer (trunk) UNRELEASED; urgency=low
     read it natively, inside the images tarball. This will be used to
     ensure that sources for d-i images do not fall out of the archive.
   * Copyright file updates for 2005.
+  * Fix manual to note that linux supports HFS+. Closes: #313488
+  * Unset LANG in chroot call in chroot-install section of manual.
+    Closes: #311704
+  * ia64 does not support rarp, remove from manual. Closes: #250028
+  * Document deconf-set-selections -c to check preseed files. Closes: #284289
 
   [ Kurt Roeckx ]
   * Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
